# career_manager

./: .gitignore  Cargo.toml  README.md  cm.db  config.txt  run_git.sh
html/: nginx.conf
html/admin/: bundle.js  docker-compose.yml  hello.js  index.html  package-lock.json
html/admin/css/: admin.css  blog.css  form.css  homepage.css  portfolio.css  profile.css  styles.css
html/admin/dev/: bundle.js
html/admin/dev/css/: styles.css
html/admin/js/: blog.js  blogEdit.js  blogIndex.js  blogNew.js  errorpage.js  homepage.js  portfolio.js  portfolioEditProject.js  portfolioEditProjet.js  portfolioIndex.js  portfolioNewProject.js  profile.js
html/dist_bu/: bundle.js
html/dist_bu/templates/: projects.html
html/templates/: home_page.tl.html  project.tl.html
html/website/: bundle.js  nginx.conf
html/website/dev/: bundle.js
html/website/dev/css/: blog.css  homepage.css  portfolio.css  styles.css
html/website/dev/templates/: article.html  blog.html  projects.html
html/website/templates/: home_page.html  projects.html  skill.html
src/: apps.rs  connector.rs  docker.rs  explore.rs  lib.rs  main.rs  models.rs  rendering.rs  router.rs  seed.rs  website_builder.rs
src/apps/admin/: controllers.rs  routes.rs
src/apps/article/: controllers.rs  routes.rs
src/apps/homepage/: controllers.rs  routes.rs
src/apps/portfolio/: controllers.rs  routes.rs
src/apps/profile/: controllers.rs  routes.rs
src/models/: article.rs  profile.rs  project.rs
src/rendering/: render_error.rs  token.rs
src/router/: api_ressource.rs  api_routes.rs  static_ressource.rs  static_routes.rs
src/tasks/: build.rs  seed.rs
src/website_builder/: articles_builder.rs
