[package]
name = "career_manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "explore"
path = "./src/explore.rs"

[[bin]]
name = "seed"
path = "./src/tasks/seed.rs"

[[bin]]
name = "run"
path = "./src/main.rs"

[[bin]]
name = "build_ws"
path = "./src/tasks/build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.32.0"
webserv-rs = { git = "https://github.com/eguefif/webserv-rs.git", rev = "0155a1fb128bbeb862817cfaa62dcaecf6342dbf"}
